# WatchDog

./: README.md  pyproject.toml  watchdog.config.json  watchdog.py
detectors/: sudo_detector.py
output/: alerts.jsonl
src/watchdog_lite/: cli.py
src/watchdog_lite/detectors/: base.py  burst_detector.py  ssh_detectors.py  sudo_detector.py
